# teams-scriber

./: README.md  main.py  pyproject.toml
.claude/: CLAUDE.md
.github/: CODEOWNERS
brain/: README.md  pyproject.toml
brain/src/brain/: caption_server.py  captions.py  identity.py  launch_ear.py  llm.py  minutes.py
brain/tests/: test_caption_buffer.py  test_caption_log.py  test_caption_pipeline.py  test_caption_server.py  test_llm.py  test_minutes.py
docs/: azure-resource-setup.md
ear/: esbuild.config.js  package-lock.json  package.json  tsconfig.json
ear/src/: index.ts  page.html  types.ts
ear/src/browser/: meeting-client.ts
